--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+
 :root{
   --p-redcolour: #E61D23;
   --s-redcolour: #8d0005;
@@ -6,6 +8,7 @@
 
 * {/*  Varies values to fit within given size */
   box-sizing: border-box;
+  font-family: 'DotGothic16', sans-serif;
 }
 
 body {
@@ -16,53 +19,35 @@ body {
 }
 
 h1 {
-  margin: 0 0 25px 0;
+  margin: 0 0 25px;
   padding: 0;
-  font-size: 32px;
+  font-size: 26pt;
   text-align: center;
-}
-
-h2 {
-  margin: 0;
-  padding: 0;
-  font-size: 22px;
-  text-align: left;
-  margin-bottom: 10px;
 }
 
 p {
   margin: 0;
-  font-size: 23px;
-  font-weight: 400;
-  line-height: 1.2em;
+  font-size: 18pt;
+  line-height: 1.5em;
 }
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-
-
 /*-------------------------Header-------------------------*/
-.page-header { /* endless background for the header */
+.page-header-box{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   min-width: 310px;
   height: 120px;
   background-color: var(--s-redcolour);
   border-bottom: 3px solid black;
-  transition: ease all .4s;
-}
-
-.page-header-box{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: auto;
-  width: 100%;
-  min-width: 310px;
-  max-width: 800px;
-  height: 120px;
-  transition: ease all .4s;
 }
 
 .header-powerbttn {
@@ -73,6 +58,8 @@ ul {
   min-width: 100px;
   min-height: 100px;
   transition: ease-in-out all .3s;
+  margin-right: 25px;
+  cursor: pointer;
 }
 
 .header-powerbttn:hover {
@@ -83,12 +70,11 @@ ul {
   min-width: 100px;
   min-height: 100px;
   transition: ease-in-out all .2s;
+  margin-right: 25px;
 }
 
 .page-header-box li {
   display: inline-block;
-  list-style-type: none;
-  padding: 0 1em;
 }
 
 .container{
@@ -100,23 +86,22 @@ ul {
 /*-------------------------Navigation link images-------------------------*/
 .nav-bttn-home {
   background-image: url(../img/greenbttn.png);
-  background-size: 100% 100%;
   width: 132px;
   height: 41px;
   transition: ease-in-out all .2s;
+  margin-right: 15px;
 }
 
 .nav-bttn-home:hover {
   background-image: url(../img/greenbttn-hover.png);
-  background-size: 100% 100%;
   width: 132px;
   height: 41px;
   transition: ease-in-out all .2s;
+  margin-right: 15px;
 }
 
 .nav-bttn-about {
   background-image: url(../img/aboutbttn.png);
-  background-size: 100% 100%;
   width: 132px;
   height: 41px;
   transition: ease-in-out all .2s;
@@ -124,7 +109,6 @@ ul {
 
 .nav-bttn-about:hover {
   background-image: url(../img/aboutbttn-hover.png);
-  background-size: 100% 100%;
   width: 132px;
   height: 41px;
   transition: ease-in-out all .2s;
@@ -156,8 +140,10 @@ ul {
   font-size: 1.5em;
   cursor: pointer;
 }
-.modal-foreground{
-  display: none;
+
+
+details.text{
+  text-align: left;
 }
 
 .modal-foreground.visible{
@@ -176,15 +162,14 @@ ul {
   top:0;
   left: 0;
   justify-content:center;
-  align-items: center;
 }
 
-.pokemon-img{  
-  width: 250px;
-  height: 250px;
-  margin: -30px 0 -10px 0;
+.pokemon-img{ 
+  align-self: center;
+  width: 130px;
+  height: auto;
+  margin: 0 0 20px 0;
 }
-
 /*-------------------------Home Page-------------------------*/
 .pokedex-window {
   position: relative;
@@ -192,6 +177,7 @@ ul {
   width: 100%;
   min-width: 300px;
   height: 500px;
+  min-height: 500px;
   background-color: var(--bg-color);
   margin: 50px auto;
   padding: 15px 15px 15px;
@@ -280,8 +266,8 @@ ul {
   width: 100%;
   min-width: 300px;
   height: 100%;
+  margin-bottom: 50px;
   max-height: 85vh;
-  margin: 0 auto;
   border-radius: 5%;
   padding: 15px;
   background-color: #d2d0e6;
@@ -289,8 +275,6 @@ ul {
 
 .about-logo-box {
   position: absolute;
-  margin-top: 0px;
-  margin:  auto;
   bottom: 15px;
   left: 0;
   right: 0;
@@ -312,17 +296,28 @@ ul {
 
 @media all and (max-width:720px) {
   .pokedex-window {
-    min-height: 200px;
-    height: 80vh;
+    height: 60vh;
     margin: 0.5em auto 0;
     padding: 15px;
+  }
+
+  p{
+    font-size: 16pt;
   }
 }
 
 @media all and (max-width:475px) {
 
+  h1{
+    font-size: 20pt;
+  }
+  p{
+    font-size: 14pt;
+  }
+
   .pokedex-window {
     padding: 10px;
+    height: 82vh;
     margin: 0.5em auto 0;
   }
   
@@ -348,35 +343,28 @@ ul {
     line-height: 45px;
   }
 
-  .page-header { /* endless background for the header */
-    min-width: 310px;
-    height: 90px;
-  }
-
   .page-header-box{
     height: 90px;
   }
 
-  .page-header-box li {
-    padding: 0;
-  }
-
   .header-powerbttn, .header-powerbttn:hover {
-    margin-left: 10px;
-    margin-right: -20px;
     width: 75px;
     height: 75px;
     min-width: 75px;
     min-height: 75px;
+    margin-right: 5px;
   }
 
   .nav-bttn-home, .nav-bttn-home:hover {
+    margin-right: 0;
+    background-size: 100% 100%;
     width: 95px;
     height: 30px;
-    margin-right: 5px;
   }
   
   .nav-bttn-about, .nav-bttn-about:hover {
+    margin-right: 0;
+    background-size: 100% 100%;
     width: 95px;
     height: 30px;
   }
@@ -397,6 +385,7 @@ ul {
 
   h2 {
     font-size: 20px;
+    text-align: left;
   }
 
   .container{
