Minor Spelling and Code edits
-Updated the about page content
-Updated the style sheets for minor mobile devices adjustments
-Removed unnecessary comments

--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,7 @@ details.text{
   
   .logos {
     width: 40px;
+    margin: 3px;
   }
 }
 
@@ -394,7 +395,7 @@ details.text{
   }
 
   .pokedex-window {
-    min-width: 280px;
+    min-width: 290px;
   }
 
   .about-window { 
